test/should_fail/inh_006.grg
using inh_model_006;

rule bla { pattern{} replace{} }
